# yith

./: .gitignore  Cargo.toml  Makefile  exchanges.yaml  log4rs.yaml
notes/: coingecko-tokens.json  etherscan-tokens.json  oasis-abi.json  oasis-idex-tokens.json
src/: cli.yaml  config.rs  email.rs  erc20.rs  error.rs  errors.rs  eth.rs  etherscan.rs  exchange.rs  geth.rs  http.rs  lib.rs  log.rs  main.rs  order.rs  price.rs  redis.rs  time.rs  types.rs  wallet.rs  weth.rs
src/exchanges/: ddex.rs  ddex3.rs  ddex4.rs  hydro.rs  idex.rs  mod.rs  oasis.rs  switcheo.rs  zeroex.rs
